--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --cor-fundo: #7be844 ;
+    --cor-fundo: #40b704 ;
     --cor-principal: #9aed3c ;
     --cor-secundaria: #089911; 
     --cor-destaque: #004105;
